[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "timetable"
version = "0.1.0"
description = "Timetable for school 146"
keywords = ["timetable", "Qt", "146"]
authors = ["Vasiliy Polyakov <146@invasy.dev>"]
license = "GPL-3.0-or-later"
readme = "README.md"
repository = "https://github.com/invasy/timetable-146"
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Environment :: X11 Applications :: Qt",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "Intended Audience :: End Users/Desktop",
    "Intended Audience :: Information Technology",
    "License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)",
    "Natural Language :: Russian",
    "Operating System :: Microsoft :: Windows :: Windows 10",
    "Operating System :: Microsoft :: Windows :: Windows 11",
    "Operating System :: POSIX :: Linux",
    "Programming Language :: Python :: 3.13",
    "Topic :: Education",
    "Typing :: Typed",
]
packages = [{include = "timetable"}]

[tool.poetry.dependencies]
python = "^3.13"
PyQt6 = "^6.7.1"
pytz = "^2024.2"

[tool.poetry.group.dev.dependencies]
pip-tools = "^7.4.1"
poetry = "^1.8.4"
ruff = "^0.7.0"

[tool.poetry.scripts]
timetable = "timetable.timetable:main"
